--- a/home.html
+++ b/home.html
@@ -107,7 +107,10 @@ function bemobCb(params) {
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/mobirise/js/script.js"></script>
-  
+  <p>Pages (HTML)</p>
+  <p>Style Sheets (CSS)</p>
+  <p>Computer Code (JavaScript)</p>
+  <p>Live Data (Files and Databases)</p>
   
 </body>
 </html>
