--- a/home.html
+++ b/home.html
@@ -61,8 +61,8 @@ Dont lose this life opportunity.  Join today!">
                         <p class="mbr-hero__subtext"><strong>&nbsp; &nbsp;</strong><br><strong>&nbsp;</strong>• brb • cum •gmen-story 🔃 podcast •rubb•top•un•bear •💦mewe-gay 🇦🇹 🍠gayblog • popperbate 🇨🇰 • popperbate ★gclub-men-network 🌿 💦mewe-gay 🍠gayblog 🍣 • gay 📎 🔃 •lgbt 🇭🇺 • instagay 🎨🇦🇺 • chav • change • gay ★popperbate • gcl •
 <br></p>
                     </div>
-                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="http://rottl.bemobtracks.com/click/1?ns=c%3D2d064d79-4aac-42d3-aeb7-497574ec6415..l%3D2174f917-2983-40d5-85d9-8902317018b1..a%3D0..b%3D0" class="cta-url-1">JOIN</a> 
-					<a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="http://rottl.bemobtracks.com/click/2?ns=c%3D2d064d79-4aac-42d3-aeb7-497574ec6415..l%3D2174f917-2983-40d5-85d9-8902317018b1..a%3D0..b%3D0" class="cta-url-2">EXPLORE</a></div>
+                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="https://me69.me/sataniclthr88" class="cta-url-1">JOIN</a> 
+					<a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="https://me69.me/mewe" class="cta-url-2">EXPLORE</a></div>
                 </div></div>
             </div></div>
         </div>
