--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html  >
-<head><script>document.write('<a href="//me69.me/?_lp=1&'+window.location.search.substring(1)+'">REPLACE</a>');</script>
+<head>
 
   <!-- Site made with Mobirise Website Builder v4.12.3, http://x.gclub.men/home.html -->
   <meta charset="UTF-8">
@@ -107,6 +107,7 @@ function bemobCb(params) {
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/mobirise/js/script.js"></script>
-
+  
+  
 </body>
 </html>
