--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@ Dont lose this life opportunity.  Join today!">
 <br></p>
                     </div>
                     <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="https://me69.me/sataniclthr88" class="cta-url-1">JOIN</a> 
-					<a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="https://me69.me/mewe" class="cta-url-2">EXPLORE</a></div>
+					<a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="https://rottl.bemobtrk.com/go/9987a222-7d1e-4698-a25c-9b89e3eeb36b" class="cta-url-2">EXPLORE</a></div>
                 </div></div>
             </div></div>
         </div>
