--- a/home.html
+++ b/home.html
@@ -61,8 +61,8 @@ Dont lose this life opportunity.  Join today!">
                         <p class="mbr-hero__subtext"><strong>&nbsp; &nbsp;</strong><br><strong>&nbsp;</strong>• brb • cum •gmen-story 🔃 podcast •rubb•top•un•bear •💦mewe-gay 🇦🇹 🍠gayblog • popperbate 🇨🇰 • popperbate ★gclub-men-network 🌿 💦mewe-gay 🍠gayblog 🍣 • gay 📎 🔃 •lgbt 🇭🇺 • instagay 🎨🇦🇺 • chav • change • gay ★popperbate • gcl •
 <br></p>
                     </div>
-                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="https://me69.me/sataniclthr88" class="cta-url-1">JOIN</a> 
-					<a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="https://rottl.bemobtrk.com/go/9987a222-7d1e-4698-a25c-9b89e3eeb36b" class="cta-url-2">EXPLORE</a></div>
+                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="https://rottl.bemobtrk.com/go/9987a222-7d1e-4698-a25c-9b89e3eeb36b" class="cta-url-1">JOIN</a> 
+					<a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="https://5e1fdaa482cd2.site123.me/" class="cta-url-2">EXPLORE</a></div>
                 </div></div>
             </div></div>
         </div>
