--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
   <meta name="description" content="   G↻Ӏմҍ•ʍҽղ  – The Hotty Dating  PoppersBators and Hookup Website for GMen!
 Dont lose this life opportunity.  Join today!">
   <meta property="og:url" content="https://asptx.github.io/gclub/home.html" />
-  <meta property="og:type" content="website" />
+  <meta property="og:type" content="webGclub" />
   <meta property="og:title" content="HOME" />
   <meta property="og:description" content="G↻Ӏմҍ•ʍҽղ – The Hotty Dating PoppersBators and Hookup Website for GMen! Dont lose this life opportunity. Join today!" />
   <meta property="og:image" content="https://asptx.github.io/gclub/assets/images/1-96-1200x1163.jpeg" />
