--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@ Dont lose this life opportunity.  Join today!">
   <meta property="og:description" content="G↻Ӏմҍ•ʍҽղ – The Hotty Dating PoppersBators and Hookup Website for GMen! Dont lose this life opportunity. Join today!" />
   <meta property="og:image" content="https://asptx.github.io/gclub/assets/images/1-96-1200x1163.jpeg" />
   <meta property="og:updated_time" content="1590750570" />	
-  <meta property="fb:app_id" content="0"  />	
+  <meta property="fb:app_id" content="679555355942593"  />	
   <meta property="og:image:alt" content="The Hotty Dating PoppersBators and Hookup Website for GMen!" />
   
   
