--- a/make-a-donation.html
+++ b/make-a-donation.html
@@ -53,30 +53,34 @@
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
                 <div class="row"><div class=" col-sm-8 col-sm-offset-2">
                     <div class="mbr-hero animated fadeInUp">
-                        <h1 class="mbr-hero__text">Make A Donation</h1>
-                        <p class="mbr-hero__subtext">Wire!!! G↻Ӏմҍ•ʍҽղ  ☣ • ENTER  ALL TIERS to get full access •
-<br>☀️ <strong>3vEnt PLUSH</strong>
-☀️<strong> $3</strong> or more per month ∝<br>☀️ <strong>GClub-ProBator</strong> ☀️ <strong>$6 </strong>or more per month ∝<br>&nbsp;☀️ <strong>GClub-BateEditor</strong> ☀️ <strong>$9</strong> or more per month ∝<br>☀️ <strong>FULLHELL</strong> ☀️ <strong>$17</strong> or more per month ∝<br><strong>Premium chat with other members and region networks.
-<br>Add any member to your Hotlist!
-<br>Exclusive to Patrons.
+                        <h1 class="mbr-hero__text">Be aware how to get Your personal custom sticker *GCLUB☢️men GIFT ID*</h1> 
+<p class="mbr-hero__subtext"><strong>&nbsp; &nbsp;</strong><br><strong>&nbsp;</strong>Follow! Save! Share it! ☣ • ENTER ALL TIERS to get full access •
+<br><strong>We are launching a new program!</strong>
+<br>☀️ Everyone who supports us in 14 days reseive have a unique opportunity
+<br> to take one of the three personal custom sticker designs! ∝
+<br>☀️ Also, users will have the exclusive right to choose the best design
+<br> for community custom sticker, and we will publish the final desig. * 
+<br>&nbsp;☀️ Special offers available to all users 
+<br> who register with in 14 days. ∝
+<br><strong>What's Your DRivE?</strong>
 <br>Remember you are human for a purpose therefore serve goodness and strive for the benefit of your species and youll be rewarded for your stewardship! ☀️</strong> 
+<br>Exclusive to Patrons.
 <br>
-<br></p>
-                    </div>
-                    <div class="mbr-buttons btn-inverse mbr-buttons--center"> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-danger" href="https://www.patreon.com/gclubmen">LEARN MORE</a></div>
-                </div></div>
-            </div></div>
-        </div>
-        
-    </div>
-</section>
+<br>
+</p> 
+</div> 
+<div class="mbr-buttons btn-inverse mbr-buttons--center"> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-danger" href="https://www.patreon.com/posts/be-aware-how-to-37784953">LEARN MORE</a></div> 
+</div></div> 
+</div></div> 
+</div> 
+</div></section>
 
 <footer class="mbr-section mbr-section--relative mbr-section--fixed-size" id="footer1-f" data-rv-view="30" style="background-color: rgb(0, 0, 0);">
     
     <div class="mbr-section__container container">
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 24.6px; padding-bottom: 24.6px;">
             <div class="col-sm-12">
-                <p class="mbr-footer__copyright">Copyright (c) 2015 Company Name. <a class="mbr-footer__link text-gray" href="https://go.gclub.men/go/40a1aec9-ecd8-4c8e-9099-aa3f5b7f9f62/">Terms of Use</a>  | <a class="mbr-footer__link text-gray" href="https://go.gclub.men/go/40a1aec9-ecd8-4c8e-9099-aa3f5b7f9f62/">Privacy Policy</a></p>
+                <p class="mbr-footer__copyright">Copyright (c) 2020 Company Name. <a class="mbr-footer__link text-gray" href="https://go.gclub.men/go/40a1aec9-ecd8-4c8e-9099-aa3f5b7f9f62/">Terms of Use</a>  | <a class="mbr-footer__link text-gray" href="https://go.gclub.men/go/40a1aec9-ecd8-4c8e-9099-aa3f5b7f9f62/">Privacy Policy</a></p>
             </div>
         </div>
     </div>
